--- a/frontpage/frontpage.html
+++ b/frontpage/frontpage.html
@@ -35,7 +35,7 @@ if (navigator.userAgent.match(/Android/)){
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/jquery.colorbox.js"></script>
 
-<!-- <meta http-equiv="refresh" content="300" /> -->
+<meta http-equiv="refresh" content="300" />
 
 <script>
 $(document).ready(function(){
