- subscript/superscript in css file

--- a/frontpage/frontpage.html
+++ b/frontpage/frontpage.html
@@ -21,6 +21,7 @@
     <!-- <link rel="stylesheet" href="css/frontpage-day.css" id="light-styles">
     <link rel="stylesheet" href="css/frontpage-night.css"  id="dark-styles"> -->
 
+    <link rel="stylesheet" href="css/style.css" id="generic-styles">
     <!-- GZ check if browser is on Android, that will be my Nexus, then show different css to fit on the Nexus screen -->
     <script type="text/javascript">
         if (navigator.userAgent.match(/Android/)) {
